bdr.BDR.scala.error
Compilation error:
BDR:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (message="R") {
             ^BDR:8: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (message="L") {
                  ^BDR:12: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (message="I") {
                  ^BDR:17: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (message="A") {
                  ^BDR:20: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (message="B") {
                  ^BDR:24: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (message="C") {
                  ^BDR:29: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (message="Z") {
                  ^BDR:32: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (message="Y") {
                  ^BDR:36: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (message="X") {
                  ^