bdr.BDR.scala.code
var message:String = ""
while (estSurMessage()) {
  message=litMessage()
  if (message="R") {
    droite()
    avance()
  }
  else if (message="L") {
    gauche()
    avance()
  }
  else if (message="I") {
    droite()
    droite()
    avance()
  }
  else if (message="A") {
    avance()
  }
  else if (message="B") {
    avance()
    avance()
  }
  else if (message="C") {
    avance()
    avance()
    avance()
  }
  else if (message="Z") {
    recule()
  }
  else if (message="Y") {
    recule()
    recule()
  }
  else if (message="X") {
    recule()
    recule()
    recule()
  }
}